--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^18.7.19",
+    "@types/yargs": "^17.0.13",
     "ts-node": "^10.9.1",
     "tsc": "^2.0.4",
     "typescript": "^4.8.3"
@@ -19,6 +20,7 @@
     "bfck": "./build/main.js"
   },
   "dependencies": {
-    "brainf_ck": "file:/home/gui/Documents/projects/brainf_ck++"
+    "brainf_ck": "file:/home/gui/Documents/projects/brainf_ck++",
+    "yargs": "^17.5.1"
   }
 }
